fix header wrap

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -47,6 +47,7 @@ p {
 		@extend .wrapper;
 		@include at-most($bro-bear) {
 			margin: 0;
+			padding: 0 1em;
 		}
 	}
 	.logo {
